--- a/downloads.ipynb
+++ b/downloads.ipynb
@@ -2374,16 +2374,17 @@
     "- were deposited before they were published (to simplify the model)\n",
     "- were published in subscription journals.\n",
     "\n",
-    "These are plotted below, and then a logarithmic extrapolation is done to show the anticipated growth in otherwise-closed biorxiv papers through 2024.\n"
+    "These are plotted below, and then a logarithmic extrapolation is done to show the anticipated growth in otherwise-closed biorxiv papers through 2024.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 201,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-23T16:04:56.005842Z",
-     "start_time": "2019-09-23T16:04:53.282653Z"
+     "end_time": "2019-09-23T18:34:12.143677Z",
+     "start_time": "2019-09-23T18:34:09.305923Z"
     }
    },
    "outputs": [
